pa: Add missing ephemeral resolver package definition
GMS needs to be considered a package which contains
an ephemeral resolver to match with vendor/google.

Change-Id: Iaa839d09b436ea3f5d7015169589d34c001a721e
Signed-off-by: Alex Naidis <alex.naidis@linux.com>

--- a/overlay/common/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/common/frameworks/base/core/res/res/values/config.xml
@@ -22,6 +22,14 @@
         <item>com.android.location.fused</item>
     </string-array>
 
+    <!-- A list of potential packages, in priority order, that may contain an
+         ephemeral resolver. Each package will be be queried for a component
+         that has been granted the PACKAGE_EPHEMERAL_AGENT permission.
+         This may be empty if ephemeral apps are not supported. -->
+    <string-array name="config_ephemeralResolverPackage">
+        <item>com.google.android.gms</item>
+    </string-array>
+
     <bool name="config_cellBroadcastAppLinks">true</bool>
 
     <!-- Disable stock OTA components if installed -->
