pa: Enable auto power modes by default
This avoids the need to set this in every device tree.

Also adjust the threshold angle for the any motion
sensor to avoid accidential wakeups.

Change-Id: I25f1fe1e9b0e9e00519dccabfc30b5b6dbc20a54
Signed-off-by: Alex Naidis <alex.naidis@linux.com>

--- a/overlay/common/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/common/frameworks/base/core/res/res/values/config.xml
@@ -82,4 +82,8 @@
     <!-- If this is true, long press on power button will be available from a
          non-interactive state. -->
     <bool name="config_supportLongPressPowerWhenNonInteractive">true</bool>
+     
+    <!-- The threshold angle for any motion detection in auto-power save modes.
+         In hundreths of a degree. -->
+    <integer name="config_autoPowerModeThresholdAngle">45</integer>
 </resources>
