--- a/overlay/common/frameworks/base/packages/SystemUI/res/values/dimens.xml
+++ b/overlay/common/frameworks/base/packages/SystemUI/res/values/dimens.xml
@@ -17,4 +17,5 @@
 -->
 <resources>
     <dimen name="rounded_corner_content_padding">8dp</dimen>
+    <dimen name="qs_header_image_offset">12dp</dimen>
 </resources>
