--- a/overlay/common/frameworks/base/packages/SystemUI/res/values/dimens.xml
+++ b/overlay/common/frameworks/base/packages/SystemUI/res/values/dimens.xml
@@ -18,4 +18,10 @@
 <resources>
     <dimen name="rounded_corner_content_padding">8dp</dimen>
     <dimen name="qs_header_image_offset">12dp</dimen>
+
+    <!-- Slice header -->
+	
+    <!-- 12dp -->
+	
+    <dimen name="header_subtitle_padding">8dp</dimen>
 </resources>
