vendor_rr:build customdoze
Signed-off-by: Varun Date <date.varun123@gmail.com>
Change-Id: I2f9d0aac9e1452a38623b5f4f2d54afd9c96c633

--- a/overlay/common/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/common/frameworks/base/core/res/res/values/config.xml
@@ -86,4 +86,7 @@
          Example: "com.android.wellbeing"
      -->
     <string name="config_defaultWellbeingPackage">com.google.android.apps.wellbeing</string>
+
+    <!-- Whether device supports an alt. ambient display -->
+    <bool name="config_alt_ambient_display">true</bool>
 </resources>
