--- a/overlay/common/frameworks/base/core/res/res/values/colors.xml
+++ b/overlay/common/frameworks/base/core/res/res/values/colors.xml
@@ -15,9 +15,9 @@
     limitations under the License.
 -->
 <resources>
-    <color name="accent_device_default_700">#167C80</color>
-    <color name="accent_device_default_dark">#167C80</color>
-    <color name="accent_device_default_light">#167C80</color>
-    <color name="material_deep_teal_200">#167C80</color>
-    <color name="material_deep_teal_500">#167C80</color>
+    <color name="accent_device_default_700">@color/accent_material_dark</color>
+    <color name="accent_device_default_dark">@color/accent_material_dark</color>
+    <color name="accent_device_default_light">@color/accent_material_dark</color>
+    <color name="material_deep_teal_200">@color/accent_material_dark</color>
+    <color name="material_deep_teal_500">@color/accent_material_dark</color>
 </resources>
